# invenio-app

./: .editorconfig  .git-blame-ignore-revs  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-release.yml  tests.yml
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  usage.rst
invenio_app/: __init__.py  celery.py  cli.py  config.py  ext.py  factory.py  helpers.py  limiter.py  rpc.py  version.py  wsgi.py  wsgi_rest.py  wsgi_ui.py
tests/: conftest.py  test_app.py  test_app_no_limitter.py  test_celery.py  test_cli.py  test_factory.py  test_helpers.py  test_limiter.py  test_rpc_server.py  test_templating.py  test_wsgi.py
tests/instance/templates/: base.html  fallback.html  only.html
tests/instance/templates/bootstrap3/: base.html  fallback.html
tests/instance/templates/semantic-ui/: base.html  instance.html
tests/templates/: base.html  fallback.html  only.html
tests/templates/bootstrap3/: base.html  fallback.html
tests/templates/semantic-ui/: base.html  noinstance.html
