# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2017-2022 CERN.
# Copyright (C) 2021      TU Wien.
# Copyright (C) 2022-2023 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-app
version = attr: invenio_app.__version__
description = WSGI, Celery and CLI applications for Invenio flavours.
long_description = file: README.rst, CHANGES.rst
keywords = invenio applications
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-app
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    flask-limiter>=1.0.1,<1.2.0
    flask-shell-ipython>=0.3.1
    flask-talisman>=0.3.2,<1.0
    invenio-base>=1.3.0
    invenio-cache>=1.1.0
    invenio-celery>=1.2.4
    invenio-config>=1.0.0
    limits>=1.5.1,<2.0
    uritools>=1.0.1

[options.extras_require]
tests =
    pytest-black>=0.3.0
    pytest-invenio>=1.4.7
    mock>=4.0.0
    sphinx>=4.2.0,<5

[options.entry_points]
console_scripts =
    invenio = invenio_app.cli:cli
invenio_base.api_apps =
    invenio_app = invenio_app:InvenioApp
invenio_base.apps =
    invenio_app = invenio_app:InvenioApp

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_app --cov-report=term-missing
testpaths = tests invenio_app
